RESOLVED FIXED83457
[BlackBerry] Parsed Cookie's m_isMaxAgeSet is not needed.
https://bugs.webkit.org/show_bug.cgi?id=83457
Summary [BlackBerry] Parsed Cookie's m_isMaxAgeSet is not needed.
Jason Liu
Reported 2012-04-09 00:30:14 PDT
m_isMaxAgeSet is not needed. And m_isMaxAgeSet is wrong when the cookie is from database.
Attachments
Patch (3.34 KB, patch)
2012-04-09 00:38 PDT, Jason Liu
no flags
Patch (3.67 KB, patch)
2012-04-09 18:50 PDT, Jason Liu
no flags
Patch (3.65 KB, patch)
2012-04-09 18:55 PDT, Jason Liu
no flags
Jason Liu
Comment 1 2012-04-09 00:38:08 PDT
Konrad Piascik
Comment 2 2012-04-09 06:34:29 PDT
Looks good to me.
Rob Buis
Comment 3 2012-04-09 06:53:57 PDT
Comment on attachment 136193 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=136193&action=review Looks good, but please fix the ChangeLog before landing. > Source/WebCore/ChangeLog:7 > + Please add an explanation, i.e. how and why you can use m_expiry instead.
Jason Liu
Comment 4 2012-04-09 18:27:31 PDT
(In reply to comment #3) > (From update of attachment 136193 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=136193&action=review > > Looks good, but please fix the ChangeLog before landing. > > > Source/WebCore/ChangeLog:7 > > + > > Please add an explanation, i.e. how and why you can use m_expiry instead. Thank you. I will do that asap.
Jason Liu
Comment 5 2012-04-09 18:50:08 PDT
Jason Liu
Comment 6 2012-04-09 18:55:40 PDT
Leo Yang
Comment 7 2012-04-09 19:13:23 PDT
Comment on attachment 136371 [details] Patch Sending to the cq ...
WebKit Review Bot
Comment 8 2012-04-09 21:28:11 PDT
Comment on attachment 136371 [details] Patch Clearing flags on attachment: 136371 Committed r113674: <http://trac.webkit.org/changeset/113674>
WebKit Review Bot
Comment 9 2012-04-09 21:28:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.