[BlackBerry] Parsed Cookie's m_isMaxAgeSet is not needed. https://bugs.webkit.org/show_bug.cgi?id=83457

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-09
Reviewed by Rob Buis.

When m_expiry is not -1, it must be set by setExpiry or setMaxAge. setExpiry will return when m_expiry
has been set. This ensures Max-Age's precedence.
And m_isMaxAgeSet is always false when the cookie is from database. This is not right.

So we use m_expiry instead of m_isMaxAgeSet.

No new tests. Refactor.

* platform/blackberry/ParsedCookie.cpp:
(WebCore::ParsedCookie::ParsedCookie):
(WebCore::ParsedCookie::setExpiry):
(WebCore::ParsedCookie::setMaxAge):
* platform/blackberry/ParsedCookie.h:
(ParsedCookie):

Canonical link: https://commits.webkit.org/100984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113674 268f45cc-cd09-0410-ab3c-d52691b4dbfc